--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
     <meta charset = "utf-8">
     <title>youtube_viewer</title>
-    <link rel = "stylesheet" href = "./pico.indigo.min.css">
+    <link rel = "stylesheet" href = "./css/pico.indigo.min.css">
   </head>
   <body>
     <form>
